--- a/Css/style.css
+++ b/Css/style.css
@@ -90,7 +90,7 @@ section[id],
 #sobre-mi,
 #contacto,
 #testimonios {
-  scroll-margin-top: 100px;
+  scroll-margin-top: 150px;
 }
 
 body {
